--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Cryptocurrency Exchange</title>
 </head>
 <body>
-    
+    <div class="root"></div>
+    <script type="module" src="./index.ts"></script>
 </body>
 </html>
